# pokemon_tcg_ai_battle

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/skills/scout-agents/: SKILL.md
agent/: main.py  rl_main.py
agent/decks/: archaludon.csv  archaludon_genesect_swap.csv  archaludon_judge_swap.csv  archaludon_ladder_judge.csv  archaludon_ladder_judge_metal.csv  archaludon_ladder_xerosic.csv  crustle.csv  cynthia_garchomp.csv  marnie_grimmsnarl.csv  mega_froslass.csv
agent/decks/coevo_seeds/: clefairy.csv  dragapult.csv  grimmsnarl.csv
agent/kaggle_agents/: alakazam.py  archaludon.py  archaludon_deck.csv  dragapult.py  romanrozen_v10.py  romanrozen_v10_deck.csv  starmie.py
agent/opponents/: mixed_pool.json  mixed_pool_archaludon_v2_alakazam.json  mixed_pool_heldout_alakazam.json  mixed_pool_heldout_archaludon.json
docs/: rl-obs-action.md
notebooks/: colab_archive_phase0_3.ipynb  colab_selfplay.ipynb  colab_selfplay_alakazam.ipynb  colab_selfplay_archaludon.ipynb  colab_throughput.ipynb
outputs/orbit_wars_discussions/: topic_713276.txt  topic_714226.txt  topic_714324.txt  topic_715147.txt
rl_research/: ABLATION_OPTION_RANK.md  COEVOLUTIONARY_DECK_SEARCH.md  DECK_SELECTION_STRATEGY.md  GATE_GAMES_CALIBRATION.md  INTERMEDIATE_SELFPLAY_2026-06-29.md  LESSONS_FROM_ORBIT_WARS.md  META_DISTRIBUTION_2026-06-30.md  META_RESEARCH_2026-07-01.md  PHASE0_THROUGHPUT.md  PHASE1_RESEARCH.md  PHASE1_SCAFFOLDING.md  POOL_GATE_2026-06-30.md  PROBE_ARCHALUDON_2026-06-30.md  RL_LADDER_ANALYSIS_2026-06-30.md  SELFPLAY_RL_PLAN.md  STRATEGY_WRITEUP_LOG.md  USE_CARD_META_HANDOFF.md  colab_ablation_selfplay.txt  colab_dist_throughput.txt  colab_probe_archaludon_medium_v2.txt  colab_probe_archaludon_small.txt  colab_selfplay_nocollapse.txt  colab_small_sanity_s0.txt  colab_small_sanity_s1.txt  colab_small_sanity_s2.txt
scripts/: ablate_option_rank.py  ablate_option_rank_selfplay.py  analyze_meta_replays.py  bench_inference.py  bench_throughput.py  build_coevo_seeds.py  build_rl_submission.py  build_submission.py  check_deck_legal.py  download_artifacts.py  eval.py  extract_decks_from_replays.py  kaggle_tool.py  local_selfplay.py  prepare.py  pull_top_replays.py  run_coevo_kill_eval.sh  run_coevo_meta_kill.sh  scout_agents.py  train_selfplay.py  validate_deck.py  validate_kaggle_agent.py
src/ptcg_battle/: __init__.py  card_meta.py  dist_collector.py  dist_worker.py  encoding.py  eval_harness.py  kaggle_client.py  model.py  opponents.py  ppo.py
tests/: conftest.py  test_card_meta.py  test_dist_collector.py  test_encoding.py  test_eval_model.py  test_model.py  test_opponents.py  test_pfsp.py  test_ppo.py
