[project]
name = "pokemon-tcg-ai-battle"
version = "0.1.0"
description = "Agent + tooling for the Kaggle 'Pokémon TCG AI Battle Challenge (Simulation)' competition"
requires-python = ">=3.11"
dependencies = [
    "kaggle-environments>=1.14.10",  # the cabt engine ships against this version
    "numpy>=1.26.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "kaggle>=2.2.2",  # CLI/API: leaderboard, submissions, kernels (code), discussions (topics)
    "ipykernel",
    "jupyter",
    "ruff>=0.8",
    "pyright>=1.1.390",
    "pytest>=8.0",  # prepare-gate test runner (encoding round-trip, eval-math units)
]
# RL stack. torch is heavy and CPU/GPU-build-specific, so it lives in its own
# extra (never pulled by a bare `uv sync`). Install per runtime:
#   CPU (local probe / tests):  uv pip install torch --index-url https://download.pytorch.org/whl/cpu
#   CUDA (Colab L4/Blackwell):  uv pip install torch --index-url https://download.pytorch.org/whl/cu121
# then `uv sync --extra rl` to record it in the environment.
rl = [
    "torch>=2.2",
]

[tool.uv]
# torch is deliberately unpinned to an index so the same `rl` extra resolves to
# either the CPU or the CUDA wheel depending on the runtime (see the rl extra above).

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["outputs", "notebooks", ".venv", "submissions", "agent/cg", "data"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade,
# B = bugbear, SIM = simplify. Sensible defaults, not pedantic.
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length is handled by the formatter
    "B008",   # function calls in argument defaults (common for configs)
]

[tool.ruff.lint.per-file-ignores]
# agent/main.py is the submitted artifact built on the proven sample policy;
# keep the hand-tuned nested scoring branches verbatim (don't collapse with SIM).
"agent/main.py" = ["SIM102", "SIM109"]
# cg.* must be imported after sys.path/chdir setup, so its imports are
# intentionally not at module top and not sortable with the rest.
"scripts/local_selfplay.py" = ["SIM105", "E402", "I001"]

[tool.pyright]
include = ["src", "scripts", "tests"]
exclude = ["outputs", "notebooks", "**/__pycache__", ".venv", "submissions"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# kaggle / kaggle-environments / numpy / torch ship partial-or-no stubs; don't
# drown in missing-stub noise.
reportMissingTypeStubs = false
reportMissingModuleSource = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]  # import ptcg_battle without an editable install
# Disable two stray ROS plugins (leaked onto PYTHONPATH from /opt/ros) that are
# incompatible with pytest 9; our suite uses no pytest plugins of its own.
addopts = "-q -p no:launch_testing -p no:launch_ros"
